# drafthouse

./: .dockerignore  .env.example  .gitignore  .infisical.json  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  UBIQUITOUS_LANGUAGE.md  compose.dokploy.yml  compose.yml
.github/workflows/: ci.yml  docker.yml
crates/dal-tx-impl/: Cargo.toml
crates/dal-tx-impl/src/: lib.rs
crates/event-subscriber/: Cargo.toml
crates/event-subscriber/src/: lib.rs
crates/migrate-pg/: Cargo.toml
crates/migrate-pg/src/: main.rs
crates/migrate-scylla/: Cargo.toml
crates/migrate-scylla/src/: main.rs
crates/publish-event/: Cargo.toml
crates/publish-event/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: event_runtime.rs  lib.rs
dal/dal/: Cargo.toml
dal/dal/src/: auth_txs.rs  collab_txs.rs  define_transactions.rs  documents_txs.rs  lib.rs
dal/dal/src/connections/: mod.rs
dal/dal/src/postgres_txs/: auth.rs  documents.rs  mod.rs
dal/dal/src/scylla_txs/: collab.rs  mod.rs
dal/kernel/: Cargo.toml
dal/kernel/src/: lib.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_QUICK_START.md  AWS_MIGRATION_DESIGN.eraser  AWS_MIGRATION_DESIGN.md  EVENT_SYSTEM.md  MANUAL_TESTING.md
frontend/: .cta.json  .dockerignore  Dockerfile  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/e2e/: editor-ux.spec.ts  error-handling.spec.ts  presence.spec.ts
frontend/public/: manifest.json  robots.txt
frontend/server/middleware/: headers.ts
frontend/src/: auth.css  documents.css  routeTree.gen.ts  styles.css
frontend/src/components/: Footer.tsx  Header.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/src/components/__tests__/: Sidebar.test.tsx  ThemeToggle.test.tsx
frontend/src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx  switch.tsx  tabs.tsx  toggle.tsx
frontend/src/features/auth/: AuthLayout.tsx  api.ts  store.ts
frontend/src/features/auth/__tests__/: api.test.ts  forgot-password.test.tsx  reset-password.test.tsx  store.test.ts
frontend/src/features/collab/: api.ts  awarenessColors.ts  awarenessStore.ts  store.ts  titleUpdate.ts  useCollabEditor.ts
frontend/src/features/collab/__tests__/: AvatarStrip.test.tsx  awarenessColors.test.ts  awarenessStore.test.ts  store.test.ts  titleUpdate.test.ts
frontend/src/features/collab/ui/: AvatarStrip.tsx
frontend/src/features/documents/: CommandPalette.tsx  ShareModal.tsx  SidebarPresence.tsx  api.ts  store.ts  useDocumentHotkeys.ts
frontend/src/features/documents/__tests__/: CommandPalette.test.tsx  ShareModal.test.tsx  SidebarPresence.test.tsx  api.test.ts  store.test.ts  useDocumentHotkeys.test.tsx
frontend/src/features/preferences/: store.ts
frontend/src/features/preferences/__tests__/: store.test.ts
frontend/src/routes/: __root.tsx  documents.$documentId.tsx  forgot-password.tsx  index.tsx  invite.$token.tsx  login.tsx  register.tsx  resend-verification.tsx  reset-password.tsx  settings.tsx  verify-email.tsx
frontend/src/routes/__tests__/: settings.test.tsx
frontend/src/shared/: errors.ts
frontend/src/widgets/editor/: Editor.tsx  editorActions.ts  formatting.ts  useDebounce.ts
frontend/src/widgets/editor/__tests__/: Editor.test.tsx  formatting.test.ts  useDebounce.test.tsx
infra/: prometheus.yml  promtail-config.yml
ingress/: Cargo.toml
ingress/src/: main.rs
load-tests/: README.md  http.js  run.sh  ws.js
migrations/postgres/: 0001_initial.sql  0002_add_refresh_tokens.sql  0003_add_password_reset_tokens.sql  0004_add_documents.sql  0005_add_document_content.sql  0006_add_welcome_doc_flag.sql  0007_add_ws_tickets.sql  0008_add_invite_links_and_members.sql
migrations/scylla/: 0001_initial.cql  0002_create_ops.cql  0003_create_snapshots.cql
nanoservices/auth/core/: Cargo.toml
nanoservices/auth/core/src/: email.rs  forgot_password.rs  jwt.rs  lib.rs  login.rs  logout.rs  logout_all.rs  me.rs  password.rs  password_reset.rs  register.rs  resend.rs  reset_password.rs  token.rs  verify.rs  ws_capability.rs
nanoservices/auth/dal/: Cargo.toml
nanoservices/auth/dal/src/: lib.rs
nanoservices/auth/networking/: Cargo.toml
nanoservices/auth/networking/src/: handlers.rs  middleware.rs  routes.rs
nanoservices/auth/networking/tests/: auth_integration_test.rs
nanoservices/collab/core/: Cargo.toml
nanoservices/collab/core/src/: doc_store_ref.rs  lib.rs  room.rs  snapshot.rs  sync_protocol.rs  title_sync.rs
nanoservices/collab/dal/: Cargo.toml
nanoservices/collab/dal/src/: lib.rs
nanoservices/collab/networking/: Cargo.toml
nanoservices/collab/networking/src/: handlers.rs  routes.rs
nanoservices/documents/core/: Cargo.toml
nanoservices/documents/core/src/: lib.rs  welcome.rs
nanoservices/documents/dal/: Cargo.toml
nanoservices/documents/dal/src/: lib.rs
nanoservices/documents/networking/: Cargo.toml
nanoservices/documents/networking/src/: handlers.rs  middleware.rs  routes.rs
nanoservices/documents/networking/tests/: documents_integration_test.rs
plans/: drafthouse.md  load-testing.md  stateless-ws-capability-tokens.md
