[package]
name = "auth-core"
version = "0.1.0"
edition = "2024"

[dependencies]
kernel = { path = "../../../dal/kernel" }
utils = { path = "../../../crates/utils" }
dal = { path = "../../../dal/dal" }
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"
jsonwebtoken = "9"
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
