[package]
name = "auth-core"
version = "0.1.0"
edition = "2024"

[dependencies]
kernel = { path = "../../../dal/kernel" }
utils = { path = "../../../crates/utils" }
dal = { path = "../../../dal/dal" }
nan-serve-event-subscriber = { path = "../../../crates/event-subscriber" }
nan-serve-publish-event = { path = "../../../crates/publish-event" }
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
ctor = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tokio = { workspace = true }
