[package]
name = "auth-networking"
version = "0.1.0"
edition = "2024"

[dependencies]
kernel = { path = "../../../dal/kernel" }
utils = { path = "../../../crates/utils" }
dal = { path = "../../../dal/dal" }
auth-core = { path = "../core" }
actix-web = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
