[package]
name = "collab-core"
version = "0.1.0"
edition = "2024"

[dependencies]
kernel        = { path = "../../../dal/kernel" }
utils         = { path = "../../../crates/utils" }
dal           = { path = "../../../dal/dal" }
collab-dal    = { path = "../dal" }
nan-serve-event-subscriber = { path = "../../../crates/event-subscriber" }
uuid          = { workspace = true }
chrono        = { workspace = true }
tracing       = { workspace = true }
tokio         = { workspace = true }
yrs           = { workspace = true }
dashmap       = { workspace = true }
sha2          = { workspace = true }
hex           = { workspace = true }
bytes         = { workspace = true }
futures-util  = { workspace = true }
bincode       = { workspace = true }
serde         = { workspace = true }
ctor          = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }
