[package]
name = "collab-networking"
version = "0.1.0"
edition = "2024"

[dependencies]
kernel = { path = "../../../dal/kernel" }
utils = { path = "../../../crates/utils" }
dal = { path = "../../../dal/dal" }
collab-core = { path = "../core" }
collab-dal = { path = "../dal" }
auth-core = { path = "../../auth/core" }
actix-web = { workspace = true }
actix-ws = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
yrs = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
